--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "json-server --watch posts.json --port 3000"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cypress": "^13.13.1",
+    "faker": "^6.6.6",
     "json-server": "^0.17.4",
     "json-server-auth": "^2.1.0"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.4.1"
   }
 }
